--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tauri-apps/api": "../../tooling/api/dist",
+    "@zerodevx/svelte-json-view": "0.2.0",
     "hotkeys-js": "^3.8.5"
   },
   "devDependencies": {
-    "svelte": "3.35.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+    "svelte": "3.35.0",
     "vite": "^2.6.4"
   }
 }
