--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -116,6 +116,7 @@ serde_json = "1.0"
 tauri = { path = ".", default-features = false, features = [ "wry" ] }
 tokio-test = "0.4.2"
 tokio = { version = "1.16", features = [ "full" ] }
+cargo_toml = "0.11"
 
 [features]
 default = [ "wry", "compression", "objc-exception", "ayatana-tray" ]
