perf(core): improve binary size with api enum serde refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ exclude = [
 
 # default to small, optimized workspace release binaries
 [profile.release]
+strip = true
 panic = "abort"
 codegen-units = 1
 lto = true
