--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -105,6 +105,7 @@ features = [ "Win32_Foundation" ]
 
 [build-dependencies]
 heck = "0.4"
+once_cell = "1.10"
 
 [dev-dependencies]
 mockito = "0.31"
