--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -104,7 +104,8 @@ version = "0.30.0"
 features = [ "Win32_Foundation" ]
 
 [build-dependencies]
-cfg_aliases = "0.1.1"
+heck = "0.4"
+once_cell = "1.10"
 
 [dev-dependencies]
 mockito = "0.31"
