tests(e2e): add updater integration test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
   "core/tauri-codegen",
   
   # integration tests
-  "core/tests/restart"
+  "core/tests/restart",
+  "core/tests/app-updater"
 ]
 
 exclude = [
