--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -12,7 +12,7 @@ on:
       - 'tooling/api/**'
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
