feat(core): expose `with_webview` API to access the platform webview

--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -28,6 +28,7 @@ webview2-com = "0.13.0"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.15", features = [ "v3_20" ] }
+webkit2gtk = { version = "0.17", features = [ "v2_22" ] }
 
 [features]
 dox = [ "wry/dox" ]
