fix(tauri-build): properly set executable version info on Windows

--- a/core/tauri-build/Cargo.toml
+++ b/core/tauri-build/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1"
 
 [target."cfg(windows)".dependencies]
 winres = "0.1"
+semver = "1"
 
 [features]
 codegen = [ "tauri-codegen", "quote" ]
