--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -74,7 +74,7 @@ dirs-next = "2.0"
 percent-encoding = "2.1"
 base64 = { version = "0.13", optional = true }
 clap = { version = "3", optional = true }
-notify-rust = { version = "4.5", optional = true }
+notify-rust = { version = "4.5", default-features = false, features = ["d"], optional = true }
 reqwest = { version = "0.11", features = [ "json", "stream" ], optional = true }
 bytes = { version = "1", features = [ "serde" ], optional = true }
 attohttpc = { version = "0.19", features = [ "json", "form" ], optional = true }
