--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -101,6 +101,11 @@ webkit2gtk = { version = "0.17", features = [ "v2_22" ] }
 
 [target."cfg(target_os = \"macos\")".dependencies]
 embed_plist = "1.2"
+cocoa = "0.24"
+objc = "0.2"
+
+[target."cfg(windows)".dependencies]
+webview2-com = "0.13.0"
 
 [target."cfg(windows)".dependencies.windows]
 version = "0.30.0"
