--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -13,7 +13,7 @@ exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 readme = "README.md"
 
 [dependencies]
-wry = { version = "0.15", default-features = false, features = [ "file-drop", "protocol" ] }
+wry = { version = "0.16", default-features = false, features = [ "file-drop", "protocol" ] }
 tauri-runtime = { version = "0.4.0", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-rc.5", path = "../tauri-utils" }
 uuid = { version = "1", features = [ "v4" ] }
@@ -22,13 +22,17 @@ rand = "0.8"
 [target."cfg(windows)".dependencies]
 webview2-com = "0.13.0"
 
-  [target."cfg(windows)".dependencies.windows]
-  version = "0.30.0"
-  features = [ "Win32_Foundation" ]
+[target."cfg(windows)".dependencies.windows]
+version = "0.30.0"
+features = [ "Win32_Foundation" ]
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.15", features = [ "v3_20" ] }
+webkit2gtk = { version = "0.17", features = [ "v2_22" ] }
 percent-encoding = "2.1"
+
+[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
+cocoa = "0.24"
 
 [features]
 dox = [ "wry/dox" ]
