--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -41,6 +41,7 @@ handlebars = { version = "4.2" }
 zip = { version = "0.6" }
 tempfile = "3.3.0"
 os_pipe = "1"
+log = { version = "0.4.17", features = ["kv_unstable"]}
 
 [target."cfg(target_os = \"windows\")".dependencies]
 attohttpc = "0.19"
