--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -63,6 +63,8 @@ url = { version = "2.2", features = [ "serde" ] }
 os_pipe = "1"
 ignore = "0.4"
 ctrlc = "3.2"
+log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_std"]}
+env_logger = "0.9.0"
 
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
@@ -75,7 +77,7 @@ heck = "0.4"
 libc = "0.2"
 
 [build-dependencies]
-tauri-utils = { version = "1.0.0-rc.0", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
+tauri-utils = { version = "1.0.0-rc.5", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
 schemars = { version = "0.8", features = [ "url" ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
