--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -57,7 +57,7 @@ thiserror = "1.0"
 once_cell = "1.10"
 tauri-runtime = { version = "0.5.0", path = "../tauri-runtime" }
 tauri-macros = { version = "1.0.0-rc.6", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-rc.6", path = "../tauri-utils" }
+tauri-utils = { version = "1.0.0-rc.6", features = [ "resources" ], path = "../tauri-utils" }
 tauri-runtime-wry = { version = "0.5.1", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 semver = "1.0"
