--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -78,7 +78,7 @@ libc = "0.2"
 
 [build-dependencies]
 tauri-utils = { version = "1.0.0-rc.5", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
-schemars = { version = "0.8", features = [ "url" ] }
+schemars = { version = "0.8", features = [ "url", "preserve_order" ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 serde_with = "1.13"
