--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -25,8 +25,8 @@ features = [
   "custom-protocol",
   "api-all",
   "cli",
-  "__updater-docs",
-  "__fs-extract-api-docs",
+  "updater",
+  "fs-extract-api",
   "system-tray",
   "devtools",
   "http-multipart",
@@ -55,10 +55,10 @@ url = { version = "2.2" }
 anyhow = "1.0"
 thiserror = "1.0"
 once_cell = "1.10"
-tauri-runtime = { version = "0.5.1", path = "../tauri-runtime" }
-tauri-macros = { version = "1.0.0-rc.7", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-rc.7", features = [ "resources" ], path = "../tauri-utils" }
-tauri-runtime-wry = { version = "0.5.2", path = "../tauri-runtime-wry", optional = true }
+tauri-runtime = { git = "https://github.com/tauri-apps/tauri" }
+tauri-macros = { git = "https://github.com/tauri-apps/tauri" }
+tauri-utils = { git = "https://github.com/tauri-apps/tauri", features = [ "resources" ] }
+tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", optional = true }
 rand = "0.8"
 semver = { version = "1.0", features = [ "serde" ] }
 serde_repr = "0.1"
@@ -143,12 +143,10 @@ updater = [
   "dialog-ask",
   "fs-extract-api"
 ]
-__updater-docs = [ "minisign-verify", "base64", "http-api", "dialog-ask" ]
 http-api = [ "attohttpc" ]
 http-multipart = [ "attohttpc/multipart-form", "reqwest/multipart" ]
 shell-open-api = [ "open", "regex", "tauri-macros/shell-scope" ]
 fs-extract-api = [ "zip" ]
-__fs-extract-api-docs = [ ]
 reqwest-client = [ "reqwest", "bytes" ]
 process-command-api = [ "shared_child", "os_pipe" ]
 global-shortcut = [
