--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -55,10 +55,10 @@ url = { version = "2.2" }
 anyhow = "1.0"
 thiserror = "1.0"
 once_cell = "1.10"
-tauri-runtime = { git = "https://github.com/tauri-apps/tauri" }
-tauri-macros = { git = "https://github.com/tauri-apps/tauri" }
-tauri-utils = { git = "https://github.com/tauri-apps/tauri", features = [ "resources" ] }
-tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", optional = true }
+tauri-runtime = { version = "0.5.1", path = "../tauri-runtime" }
+tauri-macros = { version = "1.0.0-rc.7", path = "../tauri-macros" }
+tauri-utils = { version = "1.0.0-rc.7", features = [ "resources" ], path = "../tauri-utils" }
+tauri-runtime-wry = { version = "0.5.2", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 semver = { version = "1.0", features = [ "serde" ] }
 serde_repr = "0.1"
