--- a/core/tauri-build/Cargo.toml
+++ b/core/tauri-build/Cargo.toml
@@ -23,6 +23,7 @@ tauri-codegen = { version = "1.0.0-rc.7", path = "../tauri-codegen", optional = 
 tauri-utils = { version = "1.0.0-rc.7", path = "../tauri-utils", features = [ "build", "resources" ] }
 cargo_toml = "0.11"
 serde_json = "1"
+heck = "0.4"
 
 [target."cfg(windows)".dependencies]
 winres = "0.1"
