--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -33,6 +33,7 @@ json-patch = "0.2"
 glob = { version = "0.3.0", optional = true }
 walkdir = { version = "2", optional = true }
 memchr = "2.4"
+semver = "1"
 
 [target."cfg(target_os = \"linux\")".dependencies]
 heck = "0.4"
