--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -133,8 +133,8 @@ default = [ "wry", "compression", "objc-exception" ]
 compression = [ "tauri-macros/compression", "tauri-utils/compression" ]
 wry = [ "tauri-runtime-wry" ]
 objc-exception = [ "tauri-runtime-wry/objc-exception" ]
-ayatana-tray = [ "tauri-runtime-wry/ayatana-tray" ]
-gtk-tray = [ "tauri-runtime-wry/gtk-tray" ]
+ayatana-tray = [ ]
+gtk-tray = [ ]
 isolation = [ "tauri-utils/isolation", "tauri-macros/isolation" ]
 custom-protocol = [ "tauri-macros/custom-protocol" ]
 updater = [
