--- a/.github/workflows/artifacts-updater.yml
+++ b/.github/workflows/artifacts-updater.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           toolchain: stable
 
-      - name: install webkit2gtk (ubuntu only)
+      - name: install Linux dependencies
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
