--- a/.github/workflows/lint-fmt-cli.yml
+++ b/.github/workflows/lint-fmt-cli.yml
@@ -55,6 +55,11 @@ jobs:
           override: true
           components: clippy
 
+      - name: install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev
+
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
