--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -40,6 +40,12 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: install Linux dependencies
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev
+
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
         if: matrix.platform == 'macos-latest' || matrix.platform == 'ubuntu-latest'
@@ -106,7 +112,8 @@ jobs:
           node-version: 14
           cache: yarn
           cache-dependency-path: tooling/cli/node/yarn.lock
-      - name: install webkit2gtk (ubuntu only)
+
+      - name: install Linux dependencies
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
