--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -51,6 +51,11 @@ jobs:
           toolchain: nightly
           override: true
 
+      - name: install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev
+
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
