--- a/tooling/api/tsconfig.json
+++ b/tooling/api/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
+    "target": "es2020",
+    "module": "esnext",
     "strict": true,
-    "allowJs": true,
     "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {
-      "types": ["@types"]
-    },
-    "rootDir": "src",
-    "moduleResolution": "node"
-  },
-  "include": ["./src"]
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "resolveJsonModule": true,
+    "noEmit": true
+  }
 }
