--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -74,7 +74,7 @@ jobs:
       - name: Cache core cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-core
+          cache-name: cargo_core
         with:
           path: target
           # Add date to the cache to keep it up to date
@@ -89,7 +89,7 @@ jobs:
       - name: cache cargo `tooling/bench/tests` target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-benches
+          cache-name: cargo_benches
         with:
           path: tooling/bench/tests/target
           # Add date to the cache to keep it up to date
