--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -59,7 +59,7 @@ jobs:
       - name: Cache core cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-core
+          cache-name: cargo_core
         with:
           path: target
           # Add date to the cache to keep it up to date
@@ -74,7 +74,7 @@ jobs:
       - name: Cache CLI cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-cli
+          cache-name: cargo_cli
         with:
           path: tooling/cli/target
           # Add date to the cache to keep it up to date
