--- a/.github/workflows/lint-fmt-cli.yml
+++ b/.github/workflows/lint-fmt-cli.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -82,7 +82,7 @@ jobs:
       - name: Cache CLI cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-cli
+          cache-name: cargo_cli
         with:
           path: tooling/cli/target
           # Add date to the cache to keep it up to date
