--- a/.github/workflows/test-bundler.yml
+++ b/.github/workflows/test-bundler.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -66,7 +66,7 @@ jobs:
       - name: Cache bundler cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-bundler
+          cache-name: cargo_bundler
         with:
           path: tooling/bundler/target
           # Add date to the cache to keep it up to date
@@ -125,7 +125,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -141,7 +141,7 @@ jobs:
       - name: Cache bundler cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-bundler
+          cache-name: cargo_bundler
         with:
           path: tooling/bundler/target
           # Add date to the cache to keep it up to date
