--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -73,7 +73,7 @@ jobs:
       - name: Cache core cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-core
+          cache-name: cargo_core
         with:
           path: target
           # Add date to the cache to keep it up to date
