--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Cache cargo state
         uses: actions/cache@v2
         env:
-          cache-name: cargo-state
+          cache-name: cargo_state
         with:
           path: |
             ~/.cargo/registry
@@ -78,7 +78,7 @@ jobs:
       - name: Cache core cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-core
+          cache-name: cargo_core
         with:
           path: target
           # Add date to the cache to keep it up to date
@@ -93,7 +93,7 @@ jobs:
       - name: Cache bundler cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-bundler
+          cache-name: cargo_bundler
         with:
           path: tooling/bundler/target
           # Add date to the cache to keep it up to date
@@ -108,7 +108,7 @@ jobs:
       - name: Cache CLI cargo target
         uses: actions/cache@v2
         env:
-          cache-name: cargo-cli
+          cache-name: cargo_cli
         with:
           path: tooling/cli/target
           # Add date to the cache to keep it up to date
