--- a/tooling/cli/templates/plugin/backend/.github/workflows/test.yml
+++ b/tooling/cli/templates/plugin/backend/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         toolchain: stable
         override: true
-    
+
     - name: Install gtk on Ubuntu
       if: matrix.os == 'ubuntu-latest'
       run: |
@@ -47,7 +47,7 @@ jobs:
     - name: Cache cargo state
       uses: actions/cache@v2
       env:
-        cache-name: cargo-state
+        cache-name: cargo_state
       with:
         path: |
           ~/.cargo/registry
@@ -63,7 +63,7 @@ jobs:
     - name: Cache cargo target
       uses: actions/cache@v2
       env:
-          cache-name: cargo-build
+          cache-name: cargo_build
       with:
         path: ${{ matrix.project}}/target
         # Add date to the cache to keep it up to date
@@ -75,7 +75,7 @@ jobs:
           ${{ matrix.os }}-stable-
           ${{ matrix.os }}-
 
-    - name: Run tests 
+    - name: Run tests
       uses: actions-rs/cargo@v1
       with:
         command: test
