--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-runtime-wry"
-version = "0.8.1"
+version = "0.8.2"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -14,8 +14,8 @@ readme = "README.md"
 
 [dependencies]
 wry = { version = "0.18.3", default-features = false, features = [ "file-drop", "protocol" ] }
-tauri-runtime = { version = "0.8.1", path = "../tauri-runtime" }
-tauri-utils = { version = "1.0.0-rc.9", path = "../tauri-utils" }
+tauri-runtime = { version = "0.8.2", path = "../tauri-runtime" }
+tauri-utils = { version = "1.0.0", path = "../tauri-utils" }
 uuid = { version = "1", features = [ "v4" ] }
 rand = "0.8"
 
