--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-utils"
-version = "1.0.0-rc.9"
+version = "1.0.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
