--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -76,7 +76,7 @@ libc = "0.2"
 heck = "0.4"
 
 [build-dependencies]
-tauri-utils = { version = "1.0.0-rc.5", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
+tauri-utils = { version = "1.0.0", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
 schemars = { version = "0.8", features = [ "url", "preserve_order" ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
