--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -11,7 +11,7 @@ exclude = [
   "CHANGELOG.md",
   "/target"
 ]
-homepage = "https://tauri.studio"
+homepage = "https://tauri.app"
 license = "Apache-2.0 OR MIT"
 name = "tauri"
 readme = "README.md"
