--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 rust-version = "1.57"
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
-homepage = "https://tauri.studio"
+homepage = "https://tauri.app"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Command line interface for building Tauri apps"
 include = [
