--- a/tooling/webdriver/Cargo.toml
+++ b/tooling/webdriver/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.2"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
-homepage = "https://tauri.studio"
+homepage = "https://tauri.app"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Webdriver server for Tauri applications"
 readme = "README.md"
