--- a/core/tauri-macros/Cargo.toml
+++ b/core/tauri-macros/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "os", "filesystem", "web-programming" ]
 license = "Apache-2.0 OR MIT"
-homepage = "https://tauri.studio"
+homepage = "https://tauri.app"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Macros for the tauri crate."
 edition = "2021"
