--- a/tooling/cli/node/package.json
+++ b/tooling/cli/node/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/tauri-apps/tauri.git"
   },
   "contributors": [
-    "Tauri Team <team@tauri-apps.org> (https://tauri.studio)"
+    "Tauri Team <team@tauri-apps.org> (https://tauri.app)"
   ],
   "license": "Apache-2.0 OR MIT",
   "bugs": {
