feat(codegen): set macOS app bundle name in development

--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -29,6 +29,9 @@ semver = "1"
 ico = "0.1"
 png = "0.17"
 
+[target."cfg(target_os = \"macos\")".dependencies]
+plist = "1"
+
 [features]
 default = [ "compression" ]
 compression = [ "brotli", "tauri-utils/compression" ]
