--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -47,6 +47,7 @@ sha2 = "0.10"
 hex = "0.4"
 glob = "0.3"
 zip = "0.6"
+semver = "1"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 icns = "0.3"
