--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -105,10 +105,12 @@ objc = "0.2"
 
 [target."cfg(windows)".dependencies]
 webview2-com = "0.16.0"
+win7-notifications = { version = "0.3.0", optional = true }
+sys-info = { version = "0.9", optional = true }
 
-  [target."cfg(windows)".dependencies.windows]
-  version = "0.37.0"
-  features = [ "Win32_Foundation" ]
+[target."cfg(windows)".dependencies.windows]
+version = "0.37.0"
+features = [ "Win32_Foundation" ]
 
 [build-dependencies]
 heck = "0.4"
@@ -153,7 +155,7 @@ global-shortcut = [
 ]
 clipboard = [ "tauri-runtime/clipboard", "tauri-runtime-wry/clipboard" ]
 dialog = [ "rfd" ]
-notification = [ "notify-rust" ]
+notification = [ "notify-rust", "win7-notifications", "sys-info" ]
 cli = [ "clap" ]
 system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
 devtools = [ "tauri-runtime/devtools", "tauri-runtime-wry/devtools" ]
