--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -107,7 +107,6 @@ objc = "0.2"
 [target."cfg(windows)".dependencies]
 webview2-com = "0.16.0"
 win7-notifications = { version = "0.3.0", optional = true }
-sys-info = { version = "0.9", optional = true }
 
 [target."cfg(windows)".dependencies.windows]
 version = "0.37.0"
@@ -165,7 +164,7 @@ macos-private-api = [
   "tauri-runtime/macos-private-api",
   "tauri-runtime-wry/macos-private-api"
 ]
-windows7-compat = [ "win7-notifications", "sys-info" ]
+windows7-compat = [ "win7-notifications" ]
 window-data-url = [ "data-url" ]
 api-all = [
   "clipboard-all",
