fix(core): rerun build script if platform config changes, closes #10963

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
   # examples
   "examples/file-associations/src-tauri",
   "examples/api/src-tauri",
+  "examples/resources/src-tauri",
   "examples/api/src-tauri/tauri-plugin-sample",
 ]
 resolver = "2"
