Add indicator for `auto` theme

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build:api": "pnpm run --filter \"@tauri-apps/api\" build",
     "build:cli": "pnpm run --filter \"@tauri-apps/cli\" build",
     "build:cli:debug": "pnpm run --filter \"@tauri-apps/cli\" build:debug",
-    "test": "pnpm run -r build"
+    "test": "pnpm run -r test",
+    "example:api:dev": "pnpm run --filter \"api\" tauri dev"
   },
   "devDependencies": {
     "prettier": "^3.3.3"
