--- a/examples/api/src-tauri/capabilities/run-app.json
+++ b/examples/api/src-tauri/capabilities/run-app.json
@@ -4,6 +4,8 @@
   "description": "permissions to run the app",
   "windows": ["main", "main-*"],
   "permissions": [
+    "core:window:allow-is-enabled",
+    "core:window:allow-set-enabled",
     {
       "identifier": "allow-log-operation",
       "allow": [
