chore: publish 1.x NPM packages with the v1 tag
v2 stable is knocking, and it'll be the `latest` tag release soon, so the 1.x ones should have their own tag `v1`

--- a/.changes/config.json
+++ b/.changes/config.json
@@ -115,7 +115,7 @@
           "pipe": true
         },
         {
-          "command": "yarn publish --access public --loglevel silly",
+          "command": "yarn publish --access public --loglevel silly --tag v1",
           "dryRunCommand": "npm publish --dry-run --access public",
           "pipe": true
         },
