--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "build": "rollup -c --configPlugin typescript",
     "npm-pack": "yarn build && cd ./dist && npm pack",
-    "npm-publish": "yarn build && cd ./dist && yarn publish --access public --loglevel silly",
+    "npm-publish": "yarn build && cd ./dist && yarn publish --access public --loglevel silly --tag v1",
     "ts:check": "tsc -noEmit",
     "lint": "eslint --ext ts \"./src/**/*.ts\"",
     "lint:fix": "eslint --fix --ext ts \"./src/**/*.ts\"",
