--- a/.changes/config.json
+++ b/.changes/config.json
@@ -107,7 +107,7 @@
           "pipe": true
         },
         {
-          "command": "pnpm publish --access public --loglevel silly --tag next --no-git-checks",
+          "command": "pnpm publish --access public --loglevel silly --no-git-checks",
           "dryRunCommand": "npm publish --dry-run --access public --no-git-checks",
           "pipe": true
         },
